<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_changes"
        android:icon="@drawable/ic_track_changes"
        android:title="Changes"/>
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/sidebar_git_history_msg"/>
    <item
        android:id="@+id/nav_branches"
        android:icon="@drawable/ic_branches"
        android:title="@string/sidebar_git_branches_msg"/>
    <item
        android:id="@+id/nav_remotes"
        android:icon="@drawable/ic_remote"
        android:title="@string/sidebar_git_remotes_msg"/>
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/sidebar_git_settings_msg"/>
</menu>